--- a/templates/about.html
+++ b/templates/about.html
@@ -117,7 +117,7 @@
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Numbers Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="integrator-numbers-section section-padding-120" bis_skin_checked="1">
+<div class="integrator-numbers-section padding-bottom-150 padding-top-150" bis_skin_checked="1">
   <div class="container" bis_skin_checked="1">
     <div class="row--custom " bis_skin_checked="1">
       <div class="integrator-numbers integrator-numbers__sigle-block">
@@ -215,7 +215,7 @@
     TOP Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-<div class="integrator-top-section section-padding-120">
+<div class="integrator-top-section padding-bottom-150 padding-top-150">
   <div class="container">
       <div class="content">
         <div class="content-text-block">
@@ -296,124 +296,72 @@
   </div>
 </div>
 
-<div class="about_feature-section section-padding-120 bg-light-2">
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Feature Section
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+<div class="integrator-feature-section padding-bottom-150 padding-top-150">
   <div class="container">
-    <div class="row justify-content-center text-center">
-      <div class="col-xxl-5 col-xl-6 col-lg-7 col-md-8 col-sm-10 col-xs-10">
-        <div class="section-heading">
-          <h2 class="section-heading__title heading-md text-black">
-            С нами Битрикс24 - больше, чем просто CRM-система
-          </h2>
-        </div>
-      </div>
+    <div class="section-heading">
+      <h2 class="integrator-subheading heading-md text-center">
+        <span class="primary">Правильный</span> Битрикс24 — который работает на ваш бизнес и <span class="primary">приносит результаты</span> вашему <span class="primary">бизнесу</span>
+      </h2>
     </div>
-    <div class="row feature-widget-7-row">
-      <div class="col-lg-4 col-md-6 col-xs-8 col-9">
-        <div class="feature-widget-7">
-          <div class="feature-widget-7__icon-wrapper">
-            <img src={% static '/image/about/feature-icon-1.svg' %} alt="feature
-            icon">
+    <div class="integrator-row row--custom" bis_skin_checked="1">
+      <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">01</h4>
+          <div class="integrator-feature-list">
+            <h5>Увеличение продаж</h5>
+            <p>Результат правильного внедрения Битрикс24 — увеличение выручки и прибыли компании</p>
           </div>
-          <div class="feature-widget-7__body">
-            <h4 class="feature-widget-7__title">Увеличение продаж</h4>
-            <p>
-              Результат правильного внедрения Битрикс24 - увеличение выручки и
-              прибыли компании
-            </p>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-xs-8 col-9">
-        <div class="feature-widget-7">
-          <div class="feature-widget-7__icon-wrapper">
-            <img src={% static '/image/about/feature-icon-2.svg' %} alt="feature
-            icon">
+      <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">02</h4>
+          <div class="integrator-feature-list">
+            <h5>Эффективное управление бизнесом</h5>
+            <p>Аналитика и отчётность позволяет принимать управленческие решения, опираясь на данные</p>
           </div>
-          <div class="feature-widget-7__body">
-            <h4 class="feature-widget-7__title">
-              Эффективное управление бизнесом
-            </h4>
-            <p>
-              Аналитика и отчетность позволяет принимать управленческие решения,
-              опираясь на данные
-            </p>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-xs-8 col-9">
-        <div class="feature-widget-7">
-          <div class="feature-widget-7__icon-wrapper">
-            <img src={% static '/image/about/feature-icon-3.svg' %} alt="feature
-            icon">
+      <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">03</h4>
+          <div class="integrator-feature-list">
+            <h5>Сокращение издержек</h5>
+            <p>Автоматизация бизнес-процессов, эффективная коммуникация между отделами помогает эффективно использовать рабочее время</p>
           </div>
-          <div class="feature-widget-7__body">
-            <h4 class="feature-widget-7__title">Сокращение издержек</h4>
-            <p>
-              Автоматизация бизнес-процессов, эффективная коммуникация между
-              отделами помогает эффективно использовать рабочее время
-            </p>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-xs-8 col-9">
-        <div class="feature-widget-7">
-          <div class="feature-widget-7__icon-wrapper">
-            <img src={% static '/image/about/feature-icon-4.svg' %} alt="feature
-            icon">
+      <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">04</h4>
+          <div class="integrator-feature-list">
+            <h5>Оптимизация расходов на маркетинг</h5>
+            <p>Сквозная аналитика и отчёты помогут оптимизировать рекламные расходы</p>
           </div>
-          <div class="feature-widget-7__body">
-            <h4 class="feature-widget-7__title">
-              Оптимизация расходов на маркетинг
-            </h4>
-            <p>
-              Сквозная аналитика и отчеты помогут оптимизировать рекламные
-              расходы
-            </p>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-xs-8 col-9">
-        <div class="feature-widget-7">
-          <div class="feature-widget-7__icon-wrapper">
-            <img src={% static '/image/about/feature-icon-5.svg' %} alt="feature
-            icon">
+      <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">05</h4>
+          <div class="integrator-feature-list">
+            <h5>Повышение лояльности клиентов</h5>
+            <p>Хранение и анализ данных о клиентах позволяет настроить персонализированную коммуникацию с клиентами</p>
           </div>
-          <div class="feature-widget-7__body">
-            <h4 class="feature-widget-7__title">
-              Повышение лояльности клиентов
-            </h4>
-            <p>
-              Хранение и анализ данных о клиентах позволяет настроить
-              персонализированную коммуникацию с клиентами
-            </p>
-          </div>
-        </div>
       </div>
-      <div class="col-lg-4 col-md-6 col-xs-8 col-9">
-        <div class="feature-widget-7">
-          <div class="feature-widget-7__icon-wrapper">
-            <img src={% static '/image/about/feature-icon-6.svg' %} alt="feature
-            icon">
+      <div class="integrator-feature-item" bis_skin_checked="1">
+          <h4 class="integrator-feature__title">06</h4>
+          <div class="integrator-feature-list">
+            <h5>Защита персональных данных</h5>
+            <p>Битрикс24 предлагает все необходимые инструменты для соблюдения законодательства о защите персональных данных</p>
           </div>
-          <div class="feature-widget-7__body">
-            <h4 class="feature-widget-7__title">Защита персональных данных</h4>
-            <p>
-              Битрикс24 предлагает все необходимые инструменты для соблюдения
-              законодательства о защите персональных данных
-            </p>
-          </div>
-        </div>
+      </div>
+      <div class="cta-base__button">
+        <a href="#" class="integrator-btn btn-fill--up">
+          <span>Начать использовать Битрикс24</span></a>
       </div>
     </div>
   </div>
 </div>
 
 
-
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~
     Portfolio Section
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-<div class="integrator-portfolio-section section-padding-120" id="portfolio">
+<div class="integrator-portfolio-section padding-bottom-150 padding-top-150" id="portfolio">
   <div class="container">
     <div class="section-heading section-heading--row text-center text-md-initial">
       <h2 class="integrator-subheading heading-md text-center">
@@ -475,95 +423,61 @@
 </div>
 
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    Home 8  : Team Section 
+    Team Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
-<div class="home-8_team-section padding-bottom-150 bg-cream" bis_skin_checked="1">
+<div class="integrator-team-section padding-bottom-150 padding-top-150" bis_skin_checked="1">
   <div class="container" bis_skin_checked="1">
-    <div class="row row--custom" bis_skin_checked="1">
-      <div class="col-xl-5 col-lg-6 col-md-8 col-10" bis_skin_checked="1">
-        <div class="content" bis_skin_checked="1">
-          <div class="content-text-block" bis_skin_checked="1">
-            <h2 class="content-title text-black-2 heading-lg">Наша команда Правильных интеграторов</h2>
-            <p>
-              Мы делаем большую ставку на нашу команду. Именно так мы становимся лучше, а внедрение Битрикс24 с нашей
-              командой - успешнее.
-            </p>
-            <ul class="content-list">
-              <li class="content-list-item"><img src="{% static '/image/icons/icon-check-purple.svg' %}"
-                  alt="icon check purple">Ценим опыт каждого сотрудника</li>
-              <li class="content-list-item"><img src="{% static '/image/icons/icon-check-purple.svg' %}"
-                  alt="icon check purple">Всегда стремимся к лучшему</li>
-            </ul>
-          </div>
-          <div class="content-button-block" bis_skin_checked="1">
-            <a href="" class="btn-masco btn-outline-l08 btn-fill--up rounded-pill"><span>Познакомиться с нами
-                ближе</span></a>
-          </div>
+      <div class="content" bis_skin_checked="1">
+        <div class="content-text-block" bis_skin_checked="1">
+          <h2 class="integrator-subheading text-center heading-md">Наша команда</h2>
         </div>
       </div>
-      <div class="offset-xl-1 col-lg-6 col-md-12 col-xs-10 col-5" bis_skin_checked="1">
-        <div class="row gutter-y-default team-widget-row" bis_skin_checked="1">
-          <div class=" col-lg-4 col-md-4 col-xs-6 col-auto" bis_skin_checked="1">
-            <div class="team-widget" bis_skin_checked="1">
-              <div class="team-widget__image-block" bis_skin_checked="1">
-                <img src="{% static '/image/home-8/team-image-1.png' %}" alt="alternative text">
+      <div class="integrator-team">
+        <div class="integrator-row">
+            <div class="integrator-team__images">
+              <div class="integrator-team__image">
+                <img src="{% static '/image/team/Roman.png' %}" alt="Roman">
+                <div class="qoute-autor">
+                  <p class="name">Роман Сытько</p>
+                  <p class="business-name">Руководитель компании</p>
+                </div>
               </div>
-              <h4 class="team-widget__user-name">Arlene McCoy</h4>
-              <span class="team-widget__user-position">UI/UX Designer</span>
-            </div>
-          </div>
-          <div class=" col-lg-4 col-md-4 col-xs-6 col-auto" bis_skin_checked="1">
-            <div class="team-widget" bis_skin_checked="1">
-              <div class="team-widget__image-block" bis_skin_checked="1">
-                <img src="{% static '/image/home-8/team-image-2.png' %}" alt="alternative text">
+              <div class="integrator-team__image">
+                <img src="{% static '/image/team/Inna.png' %}" alt="Inna">
+                <div class="qoute-autor">
+                  <p class="name">Инна Литвин</p>
+                  <p class="business-name">Руководитель отдела продаж</p>
+                </div>
               </div>
-              <h4 class="team-widget__user-name">Theresa Webb</h4>
-              <span class="team-widget__user-position">Project Manager</span>
             </div>
-          </div>
-          <div class=" col-lg-4 col-md-4 col-xs-6 col-auto" bis_skin_checked="1">
-            <div class="team-widget" bis_skin_checked="1">
-              <div class="team-widget__image-block" bis_skin_checked="1">
-                <img src="{% static '/image/home-8/team-image-3.png' %}" alt="alternative text">
+            <div class="integrator-team__info">
+              <div class="integrator-team-quote">
+                <div class="quote-revert">
+                  <img src="{% static '/image/quote.svg' %}" alt="quote">
+                </div>
+                <p class="quote-text">Мы — команда, где каждый специалист на своём месте и в то же время часть дружного, поддерживающего коллектива. У нас ценятся инициативность, стремление к росту и любовь к технологиям.</p>
+                <p class="quote-text">Мы развиваемся вместе: участвуем в обучениях, прокачиваем скиллы и делимся опытом. Здесь ценят идеи, уважают личность и радуются общим победам. У нас интересно, стабильно и просто по‑человечески классно работать.</p>
+                <div class="quote">
+                  <img src="{% static '/image/quote.svg' %}" alt="quote">
+                </div>
               </div>
-              <h4 class="team-widget__user-name">Floyd Miles</h4>
-              <span class="team-widget__user-position">Marketing Expert</span>
-            </div>
-          </div>
-          <div class=" col-lg-4 col-md-4 col-xs-6 col-auto" bis_skin_checked="1">
-            <div class="team-widget" bis_skin_checked="1">
-              <div class="team-widget__image-block" bis_skin_checked="1">
-                <img src="{% static '/image/home-8/team-image-4.png' %}" alt="alternative text">
+              <div class="integrator-team-button">
+                <a href="#" class="integrator-btn integrator-btn-light btn-fill--up">
+                  <span>Попробовать бесплатно</span>
+                </a>
               </div>
-              <h4 class="team-widget__user-name">Darlene Robertson</h4>
-              <span class="team-widget__user-position">Web Developer</span>
             </div>
-          </div>
-          <div class=" col-lg-4 col-md-4 col-xs-6 col-auto" bis_skin_checked="1">
-            <div class="team-widget" bis_skin_checked="1">
-              <div class="team-widget__image-block" bis_skin_checked="1">
-                <img src="{% static '/image/home-8/team-image-5.png' %}" alt="alternative text">
-              </div>
-              <h4 class="team-widget__user-name">Bessie Cooper</h4>
-              <span class="team-widget__user-position">Product Designer</span>
-            </div>
-          </div>
-          <div class=" col-lg-4 col-md-4 col-xs-6 col-auto" bis_skin_checked="1">
-            <div class="team-widget" bis_skin_checked="1">
-              <div class="team-widget__image-block" bis_skin_checked="1">
-                <img src="{% static '/image/home-8/team-image-6.png' %}" alt="alternative text">
-              </div>
-              <h4 class="team-widget__user-name">Jerome Bell</h4>
-              <span class="team-widget__user-position">HTML Developer</span>
-            </div>
-          </div>
         </div>
       </div>
-    </div>
   </div>
 </div>
 
-<div class="about_team-section section-padding-120">
+<div class="container"><div class="integrator-line"></div></div>
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    Materials Section 
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
+
+<div class="about_team-section padding-bottom-150 padding-top-150">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-xxl-5 col-lg-6 col-md-8 col-10">
@@ -634,92 +548,6 @@
     </div>
   </div>
 </div>
-
-<section class="section-padding">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-xxl-5 col-lg-6 col-md-8 col-10">
-        <div class="section-heading text-center">
-          <h2 class="section-heading__title heading-md text-black">
-            Лицензии и сертификаты
-          </h2>
-        </div>
-      </div>
-    </div>
-
-    <div class="row portfolio-v2 isotope-navigation" style="position: relative; height: 1370.05px">
-      <div class="col-md-6 grid-item grid-height-2 portfolio-1 portfolio-5"
-        style="position: absolute; left: 0%; top: 0px">
-        <a href="" class="portfolio-widget portfolio-widget--overlay">
-          <div class="portfolio-widget_image-block">
-            <img src={% static '/image/portfolio-2/1.png' %} alt="portfolio
-            image">
-          </div>
-          <div class="portfolio-widget__title-block">
-            <h3 class="portfolio-widget__title">
-              App — The power of communication
-            </h3>
-            <span class="portfolio-widget__category">UI/UX Design</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-6 grid-item portfolio-2 portfolio-3" style="position: absolute; left: 50%; top: 0px">
-        <a href="" class="portfolio-widget portfolio-widget--overlay">
-          <div class="portfolio-widget_image-block">
-            <img src={% static '/image/portfolio-2/2.png' %} alt="portfolio
-            image">
-          </div>
-          <div class="portfolio-widget__title-block">
-            <h3 class="portfolio-widget__title">
-              Website — The future lifestyle platform
-            </h3>
-            <span class="portfolio-widget__category">Branding</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-6 grid-item grid-height-1 portfolio-1 portfolio-4"
-        style="position: absolute; left: 0%; top: 494.35px">
-        <a href="" class="portfolio-widget portfolio-widget--overlay">
-          <div class="portfolio-widget_image-block">
-            <img src={% static '/image/portfolio-2/3.png' %} alt="portfolio
-            image">
-          </div>
-          <div class="portfolio-widget__title-block">
-            <h3 class="portfolio-widget__title">
-              Campaign — Provision of information
-            </h3>
-            <span class="portfolio-widget__category">Commercial</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-6 grid-item portfolio-1 portfolio-5" style="position: absolute; left: 50%; top: 681.35px">
-        <a href="" class="portfolio-widget portfolio-widget--overlay">
-          <div class="portfolio-widget_image-block">
-            <img src={% static '/image/portfolio-2/4.png' %} alt="portfolio
-            image">
-          </div>
-          <div class="portfolio-widget__title-block">
-            <h3 class="portfolio-widget__title">Journal — Asset in business</h3>
-            <span class="portfolio-widget__category">UI/UX Design</span>
-          </div>
-        </a>
-      </div>
-      <div class="col-md-6 grid-item grid-height-1 portfolio-2 portfolio-4"
-        style="position: absolute; left: 0%; top: 875.7px">
-        <a href="" class="portfolio-widget portfolio-widget--overlay">
-          <div class="portfolio-widget_image-block">
-            <img src={% static '/image/portfolio-2/5.png' %} alt="portfolio
-            image">
-          </div>
-          <div class="portfolio-widget__title-block">
-            <h3 class="portfolio-widget__title">Book — Design of the year</h3>
-            <span class="portfolio-widget__category">Branding</span>
-          </div>
-        </a>
-      </div>
-    </div>
-  </div>
-</section>
 
 
 <!--~~~~~~~~~~~~~~~~~~~~~~~~
