--- a/templates/contact.html
+++ b/templates/contact.html
@@ -48,6 +48,7 @@
   </div>
 </div>
 
+<div class="container"><div class="integrator-line"></div></div>
 <!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Conatct : Main Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
