--- a/staticfiles/scss/helpers/_spacings.scss
+++ b/staticfiles/scss/helpers/_spacings.scss
@@ -172,6 +172,21 @@
   }
 }
 
+.padding-top-150 {
+  padding-top: 60px;
+
+  @media (min-width:576px) {
+    padding-top: 80px;
+  }
+
+  @media (min-width:992px) {
+    padding-top: 120px;
+  }
+  @media (min-width:1200px) {
+    padding-top: 150px;
+  }
+}
+
 
 /* ----------------------------
 Common: Spacing Utilities
