--- a/templates/about.html
+++ b/templates/about.html
@@ -477,16 +477,15 @@
     Materials Section 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 
-<div class="about_team-section padding-bottom-150 padding-top-150">
+<div class="integrator-materials-section padding-bottom-150 padding-top-150">
   <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-xxl-5 col-lg-6 col-md-8 col-10">
-        <div class="section-heading text-center">
-          <h2 class="section-heading__title heading-md text-black">
-            Материалы с нашим участием
-          </h2>
-        </div>
-      </div>
+    <div class="integrator-row">
+        <h2 class="integrator-subheading heading-md">
+          Мы говорим
+        </h2>
+        <a href="#" class="integrator-link">
+          <span>Все материалы</span>
+        </a>
     </div>
 
     <div class="row justify-content-center">
